(Java) Enable native access to javafx.graphics in maven goal javafx:run